# S4L_Sionna_RT

./: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml  setup.py
src/s4l_sionna_rt/: __init__.py  register.py
src/s4l_sionna_rt/adapters/: AntennaArray.py  Base.py  Boolean.py  Camera.py  File.py  Integer.py  RGB.py  Real.py  Rescaling.py  Resizing.py  Sample_Positions.py  String.py  Toggle.py  Vec2.py  Vec3.py  __init__.py
src/s4l_sionna_rt/controller/: __init__.py  simulation_binding.py  simulation_manager.py
src/s4l_sionna_rt/model/: __init__.py  antenna.py  background_scene.py  draw.py  material_settings.py  plots.py  receivers.py  render_settings.py  setup_settings.py  simulation.py  simulation_extractor.py  solver_settings.py  transmitters.py
src/s4l_sionna_rt/solver/: __init__.py
src/s4l_sionna_rt/solver/driver/: SionnaLoader.py  __init__.py  api_models.py  main.py
