[project]
name = "s4l-sionna-rt-plugin"
version = "0.1.0"
description = "A simulation plugin for S4L"
authors = [
    { name = "Lucia Moya-Sans", email = "moyasans@itis.swiss" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "s4l_core",
    "sionna",
    "scipy >= 1.14.1",
    "matplotlib >= 3.10",
    "sionna-rt >= 1.0.2",
    "tensorflow >= 2.14, !=2.16, !=2.17",
    "numpy >= 1.26, <2.0",
    "importlib_resources >= 6.4.5"
]

[project.entry-points."s4l.simulator_plugins"]
s4l_sionna_rt = "s4l_sionna_rt.register:register"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]